--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/bcryptjs": "^3.0.0",
+    "@vercel/postgres": "^0.10.0",
+    "bcryptjs": "^3.0.3",
     "currency-codes": "^2.2.0",
     "date-fns": "^4.1.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^4.0.0",
     "lucide-react": "^0.562.0",
     "next": "14.2.0",
+    "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
     "papaparse": "^5.5.3",
     "react": "^18",
