--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-virtual": "^3.13.18",
     "@types/bcryptjs": "^3.0.0",
     "@vercel/postgres": "^0.10.0",
     "bcryptjs": "^3.0.3",
